--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,28 +1,37 @@
 pipeline {
     agent any
-    options {
-        skipStagesAfterUnstable()
+    environment
+    {
+        cont_name = "app-cont"
+        image_name = "app-image"
+        version = "v1"
     }
     stages {
-        stage('Build') {
+       
+        stage('Build artifact') {
             steps {
-                sh 'mvn -B -DskipTests clean package'
+                sh 'mvn clean install'
             }
         }
-        stage('Test') {
+         stage('test') {
             steps {
                 sh 'mvn test'
             }
-            post {
-                always {
-                    junit 'target/surefire-reports/*.xml'
-                }
-            }
         }
-        stage('Deliver') { 
+         stage('docker build') {
             steps {
-                sh './jenkins/scripts/deliver.sh' 
+                sh """ docker rm app || true
+                docker build -t ${image_name}:${version} .
+                """
+            }
+         }
+             stage(' docker run') {
+            steps {
+                sh """ docker rm ${cont_name} || true
+                docker run -d -p 5000:8080 --name ${cont_name} ${image_name}:${version}
+                """
             }
         }
-    }
+        }
+    
 }
