--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -14,20 +14,20 @@ pipeline {
                 sh 'mvn clean install'
             }
         }
-         stage('test') {
+         stage('Test') {
             steps {
                 sh 'mvn test'
             }
         }
         
-         stage('docker build') {
+         stage('Build Image') {
             steps {
                 sh """ docker rm app || true
                 docker build -t ${image_name}:${version} .
                 """
             }
          }
-             stage(' docker run') {
+             stage(' Run Container') {
             steps {
                 sh """ docker rm ${cont_name} || true
                 docker run -d -p 5000:8080 --name ${cont_name} ${image_name}:${version}
