--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -29,7 +29,9 @@ pipeline {
          }
              stage(' Run Container') {
             steps {
-                sh """ docker rm ${cont_name} || true
+                sh """ 
+                docker stop ${cont_name} || true
+                docker rm ${cont_name} || true
                 docker run -d -p 5000:8080 --name ${cont_name} ${image_name}:${version}
                 """
             }
